fix add. yazi exe

--- a/sync/.config/yazi/keymap.toml
+++ b/sync/.config/yazi/keymap.toml
@@ -9,6 +9,19 @@ on = ["<Esc>"]
 run = "quit"
 desc = "quit"
 
+[[mgr.prepend_keymap]]
+on = "!"
+for = "unix"
+run = 'shell "$SHELL" --block'
+desc = "Open $SHELL here"
+
+# If you also using Yazi on Windows:
+[[mgr.prepend_keymap]]
+on = "!"
+for = "windows"
+run = 'shell "pwsh.exe" --block'
+desc = "Open PowerShell here"
+
 [[input.prepend_keymap]]
 on = "<Esc>"
 run = "close"
