--- a/sync/.config/conky/conky.conf
+++ b/sync/.config/conky/conky.conf
@@ -1,7 +1,26 @@
 -- vi: ft=lua
 conky.config = {
+  out_to_console = false,
+  out_to_ncurses = false,
+  out_to_stderr = false,
+  -- out_to_wayland = false,
+  out_to_wayland = true,
+  out_to_x = false,
+
   alignment = 'top_left',
   background = false,
+  gap_x = 5,
+  gap_y = 60,
+  minimum_height = 5,
+  minimum_width = 5,
+
+  -- own_window = true,
+  -- own_window_class = 'Conky',
+  -- own_window_type = 'desktop',
+  -- own_window_hints = 'undecorated,sticky,below,skip_taskbar,skip_pager',
+
+  font = 'DejaVu Sans Mono:size=12',
+
   border_width = 1,
   cpu_avg_samples = 2,
   default_color = 'white',
@@ -13,24 +32,9 @@ conky.config = {
   draw_outline = false,
   draw_shades = false,
   extra_newline = false,
-  font = 'DejaVu Sans Mono:size=12',
-  gap_x = 60,
-  gap_y = 60,
-  minimum_height = 5,
-  minimum_width = 5,
   net_avg_samples = 2,
   no_buffers = true,
-  out_to_console = false,
-  out_to_ncurses = false,
-  out_to_stderr = false,
-  -- out_to_wayland = false,
-  out_to_wayland = true,
-  out_to_x = false,
   -- out_to_x = true,
-  own_window = true,
-  own_window_class = 'Conky',
-  own_window_type = 'normal',
-  own_window_hints = 'undecorated,sticky,below,skip_taskbar,skip_pager',
   show_graph_range = false,
   show_graph_scale = false,
   stippled_borders = 0,
