--- a/sync/.config/lazygit/config.yml
+++ b/sync/.config/lazygit/config.yml
@@ -1,5 +1,7 @@
 # https://github.com/jesseduffield/lazygit/blob/master/docs/Config.md
 # - [lazygitを英語で使いたい](https://k-koh.hatenablog.com/entry/2022/11/15/155430)
+quitOnTopLevelReturn: true
+
 os:
   editPreset: "nvim-remote"
 gui:
