--- a/sync/.config/sway/config
+++ b/sync/.config/sway/config
@@ -14,7 +14,9 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term wezterm
+# set $term wezterm
+set $term ghostty
+# set $term kitty
 # Your preferred application launcher
 #set $menu wmenu-run
 set $menu_app wofi --show=drun
