--- a/sync/.config/kitty/kitty.conf
+++ b/sync/.config/kitty/kitty.conf
@@ -20,7 +20,7 @@
 #: <https://sw.kovidgoyal.net/kitty/kittens/choose-fonts/#font-spec-
 #: syntax>.
 
-# font_size 11.0
+font_size 14.0
 
 #: Font size (in pts).
 
@@ -1457,8 +1457,20 @@ tab_bar_edge top
 
 #: Color scheme {{{
 
+
+
 # foreground #dddddd
 # background #000000
+background #1e222a
+foreground #abb2bf
+color0 #20232A
+color1 #e86671
+color2 #98c379
+color3 #e0af68
+color4 #61afef
+color5 #c678dd
+color6 #56b6c2
+color7 #798294
 
 #: The foreground and background colors.
 
@@ -2546,12 +2558,14 @@ tab_bar_edge top
 # map kitty_mod+right next_tab
 # map shift+cmd+]     next_tab
 # map ctrl+tab        next_tab
+map alt+.             next_tab
 
 #: Previous tab
 
 # map kitty_mod+left previous_tab
 # map shift+cmd+[    previous_tab
 # map ctrl+shift+tab previous_tab
+map alt+,            previous_tab
 
 #: New tab
 
