--- a/sync/.tmux.conf
+++ b/sync/.tmux.conf
@@ -35,11 +35,11 @@ set -sg escape-time 1
 # set -g default-command "/usr/bin/zsh"
 
 # window の作成, 移動
-# bind -n M-c new-window -c "#{pane_current_path}"
-# bind -n M-. next-window
-# bind -n M-, previous-window
-# bind -n M-Left swap-window -t -1\; select-window -t -1 
-# bind -n M-Right swap-window -t +1\; select-window -t +1
+bind -n M-c new-window -c "#{pane_current_path}"
+bind -n M-. next-window
+bind -n M-, previous-window
+bind -n M-Left swap-window -t -1\; select-window -t -1 
+bind -n M-Right swap-window -t +1\; select-window -t +1
 bind -T prefix z resize-pane -Z
 
 #
