kitty, text-object, <space>t

--- a/sync/.config/kitty/kitty.conf
+++ b/sync/.config/kitty/kitty.conf
@@ -2571,6 +2571,7 @@ map alt+,            previous_tab
 
 # map kitty_mod+t new_tab
 # map cmd+t       new_tab
+map alt+c       new_tab
 
 #: Close tab
 
@@ -2584,10 +2585,12 @@ map alt+,            previous_tab
 #: Move tab forward
 
 # map kitty_mod+. move_tab_forward
+map alt+right move_tab_forward
 
 #: Move tab backward
 
 # map kitty_mod+, move_tab_backward
+map alt+left move_tab_backward
 
 #: Set tab title
 
