--- a/sync/.config/waybar/config.jsonc
+++ b/sync/.config/waybar/config.jsonc
@@ -94,10 +94,10 @@
     "tray": {
         "icon-size": 30,
         "spacing": 10,
-        // "icons": {
-        //   "blueman": "bluetooth",
+        "icons": {
+          "blueman": "bluetooth",
         //   "TelegramDesktop": "$HOME/.local/share/icons/hicolor/16x16/apps/telegram.png"
-        // }
+        }
     },
     "clock": {
         // "timezone": "America/New_York",
@@ -106,11 +106,11 @@
         "format-alt": "{:%Y-%m-%d}"
     },
     "cpu": {
-      "format": " {usage}%",
+      "format": "{usage}%",
       "tooltip": false
     },
     "memory": {
-      "format": " {}%"
+      "format": "{}%"
     },
     "temperature": {
         // "thermal-zone": 2,
@@ -118,7 +118,7 @@
         "critical-threshold": 80,
         // "format-critical": "{temperatureC}°C {icon}",
         "format": "{icon}{temperatureC}°C",
-        "format-icons": ["", " ", ""]
+        "format-icons": ["", "", ""]
     },
     "backlight": {
         // "device": "acpi_video1",
@@ -156,11 +156,11 @@
     },
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "{essid} ( {signalStrength}%)",
-        "format-ethernet": " {ipaddr}/{cidr}",
-        "tooltip-format": " {ifname} via {gwaddr}",
-        "format-linked": " {ifname} (No IP)",
-        "format-disconnected": "⚠ Disconnected",
+        "format-wifi": "{essid}({signalStrength}%)",
+        "format-ethernet": "{ipaddr}/{cidr}",
+        "tooltip-format": "{ifname} via {gwaddr}",
+        "format-linked": "{ifname} (No IP)",
+        "format-disconnected": "⚠Disconnected",
         "format-alt": "{ifname}: {ipaddr}/{cidr}"
     },
     "pulseaudio": {
