--- a/sync/.config/pipewire/pipewire.conf
+++ b/sync/.config/pipewire/pipewire.conf
@@ -1,4 +1,4 @@
-# Daemon config file for PipeWire version "1.4.8" #
+# Daemon config file for PipeWire version "1.4.9" #
 #
 # Copy and edit this file in /etc/pipewire for system-wide changes
 # or in ~/.config/pipewire for local changes.
@@ -15,14 +15,14 @@ context.properties = {
     #support.dbus                          = true
     #link.max-buffers                      = 64
     link.max-buffers                       = 16                       # version < 3 clients can't handle more
-    mem.warn-mlock                         = true                     # Gentoo should have good RLIMITs now
+    #mem.warn-mlock                        = false
     #mem.allow-mlock                       = true
     #mem.mlock-all                         = false
     #clock.power-of-two-quantum            = true
     #log.level                             = 2
     #cpu.zero.denormals                    = false
 
-    loop.rt-prio = -1            # -1 = use module-rt prio, 0 disable rt
+    #loop.rt-prio = -1            # -1 = use module-rt prio, 0 disable rt
     #loop.class = data.rt
     #thread.affinity = [ 0 1 ]    # optional array of CPUs
     #context.num-data-loops = 1   # -1 = num-cpus, 0 = no data loops
@@ -314,11 +314,40 @@ context.objects = [
     # This creates a single PCM source device for the given
     # alsa device path hw:0. You can change source to sink
     # to make a sink in the same way.
+    #{ factory = adapter
+    #    args = {
+    #        factory.name           = api.alsa.pcm.source
+    #        node.name              = "alsa-source"
+    #        node.description       = "PCM Source"
+    #        media.class            = "Audio/Source"
+    #        api.alsa.path          = "hw:0"
+    #        api.alsa.period-size   = 1024
+    #        api.alsa.headroom      = 0
+    #        api.alsa.disable-mmap  = false
+    #        api.alsa.disable-batch = false
+    #        audio.format           = "S16LE"
+    #        audio.rate             = 48000
+    #        audio.channels         = 2
+    #        audio.position         = "FL,FR"
+    #    }
+    #}
+
+    # Use the metadata factory to create metadata and some default values.
+    #{ factory = metadata
+    #    args = {
+    #        metadata.name = my-metadata
+    #        metadata.values = [
+    #            { key = default.audio.sink   value = { name = somesink } }
+    #            { key = default.audio.source value = { name = somesource } }
+    #        ]
+    #    }
+    #}
+
     { factory = adapter
        args = {
            factory.name           = api.alsa.pcm.sink
            node.name              = "alsa-sink"
-           node.description       = "PCM Sink"
+           node.description       = "AMPLIFIER Sink"
            media.class            = "Audio/Sink"
            api.alsa.path          = "dmix:AMPLIFIER,0"
            # api.alsa.path          = "hw:0"
@@ -333,16 +362,6 @@ context.objects = [
        }
     }
 
-    # Use the metadata factory to create metadata and some default values.
-    #{ factory = metadata
-    #    args = {
-    #        metadata.name = my-metadata
-    #        metadata.values = [
-    #            { key = default.audio.sink   value = { name = somesink } }
-    #            { key = default.audio.source value = { name = somesource } }
-    #        ]
-    #    }
-    #}
 ]
 
 context.exec = [
