--- a/sync/.config/pipewire/pipewire.conf
+++ b/sync/.config/pipewire/pipewire.conf
@@ -346,10 +346,10 @@ context.objects = [
     { factory = adapter
        args = {
            factory.name           = api.alsa.pcm.sink
-           node.name              = "alsa-sink"
+           node.name              = "alsa-dmix"
            node.description       = "AMPLIFIER Sink"
            media.class            = "Audio/Sink"
-           api.alsa.path          = "dmix:AMPLIFIER,0"
+           api.alsa.path          = "dmix:0,0"
            # api.alsa.path          = "hw:0"
            # api.alsa.period-size   = 1024
            # api.alsa.headroom      = 0
@@ -361,7 +361,6 @@ context.objects = [
            # audio.position         = "FL,FR"
        }
     }
-
 ]
 
 context.exec = [
